# MinLang

./: .gitignore  Cargo.toml  GEMINI.md  README.md  mkdocs.yml  scratch_async.dream  scratch_fetch.dream  test_lex.rs
.github/workflows/: docs.yml
crates/dream-diagnostics/: Cargo.toml
crates/dream-diagnostics/src/: lib.rs
crates/dream-syntax/: Cargo.toml
crates/dream-syntax/src/: lexer.rs  lib.rs  precedence.rs  syntax_tree.rs
crates/dream-syntax/src/nodes/: expression.rs  function.rs  interface_node.rs  mod.rs  pattern.rs  program.rs  statement.rs  struct_node.rs  types.rs
crates/dream-syntax/src/parser/: declarations.rs  expressions.rs  mod.rs  statements.rs
crates/dream-syntax/src/tests/: lexer_tests.rs  parser_tests.rs
crates/dream-syntax/src/token/: syntax_token.rs  syntax_trivia.rs  token_kind.rs
crates/dream-text/: Cargo.toml
crates/dream-text/src/: lib.rs  text_span.rs
design/compiler/: 01-pipeline-overview.md  02-type-system.md  03-hir.md  04-mir.md  05-writing-passes.md  06-relooper-and-backend.md  07-adding-a-language-feature.md  08-testing-and-determinism.md  09-migration-status.md  README.md
docs/: getting-started.md  index.md  memory.md
docs/language/: arrays.md  async.md  callbacks.md  classes.md  control-flow.md  discriminated-unions.md  enums.md  fetch.md  functions.md  generics.md  http.md  imports.md  interfaces.md  interop.md  json.md  objects.md  operators.md  references.md  regex.md  structs.md  types.md  variables.md
docs/stdlib/: bool.md  builtins.md  byte.md  char.md  collections.md  datetime.md  double.md  file.md  float.md  http.md  int.md  json.md  list.md  long.md  map.md  option.md  regex.md  result.md  string.md  uint.md  ulong.md
runtime/: dream.js  minlang.js
sample/: discriminated_unions.dream  math_lib.dream  math_lib.ml  runner.js  test_arrays.dream  test_arrays.ml  test_features.dream  test_features.ml  test_generic.dream  test_generic.ml  test_multi_file.dream  test_multi_file.ml
sample/interop/: async_fetch.dream  async_fetch.html  async_runner.mjs  callbacks.dream  callbacks.mjs  fetch.dream  fetch.html  fetch.mjs  file_io.dream  http.dream  http.html  http.mjs  http_native_check.dream  interop.abi.json  interop.dream  interop.html  jsref.dream  jsref.mjs  regex.dream  regex.html  regex.mjs  runner.mjs
src/: diagnostics.rs  intrinsics.rs  lib.rs  main.rs
src/codegen/: mod.rs
src/codegen/wasm/: async_support.rs  expression.rs  memory.rs  mod.rs  module.rs  object.rs  statement.rs  strings.rs  unions.rs  utils.rs
src/driver/: abi.rs  compiler.rs  diagnostics.rs  error.rs  json_derive.rs  mod.rs  prelude.rs  source_loader.rs  source_manager.rs
src/execution/: host.rs  mod.rs  wasm_runner.rs
src/execution/host/: console.rs  datetime.rs  file.rs  http.rs  math.rs  memory.rs  mod.rs  regex.rs
src/hir/: layout.rs  mod.rs  ops.rs
src/lang/: compiler.rs  mod.rs  utils.rs
src/lang/code_analysis/: evaluator.rs  lexer.rs  mod.rs  parser.rs  syntax_kind.rs  syntax_node.rs  syntax_token.rs  syntax_tree.rs
src/lang/code_generator/: cpp_generator.rs  mod.rs  wasm_generator.rs
src/lang/execution/: mod.rs  wasm_runner.rs
src/lang/semantic_analysis/: analyzer.rs  function_control_flow.rs  function_table.rs  mod.rs  (+2 more)
src/mir/: abi.rs  async_emit.rs  build.rs  emit.rs  lower.rs  mod.rs  print.rs  relooper.rs
src/rdp/: grammar.lang  parser.rs  syntaxtree.rs
src/sample/: basic_sum.ml  basic_sum.wat  index.html  index.js  math_lib.ml  runner.js  test_arrays.ml  test_features.ml
src/semantics/: errors.rs  function_control_flow.rs  function_table.rs  mod.rs  struct_table.rs  symbol_table.rs  union_table.rs
src/stdlib/: array.dream  bool.dream  byte.dream  char.dream  console_color.dream  core.dream  double.dream  fetch.dream  file.dream  file_stream.dream  float.dream  http.dream  http_response.dream  int.dream  json.dream  json_value.dream  jsref.dream  list.dream  long.dream  map.dream  math.dream  mod.rs  option.dream  primitives.dream  promise.dream  regex.dream  result.dream  string.dream  system.dream  time.dream  uint.dream  ulong.dream
src/syntax/: lexer.rs  mod.rs  precedence.rs  syntax_tree.rs
src/text/: text_span.rs
src/types/: compat.rs  def.rs  display.rs  interner.rs  kind.rs  lower.rs  mod.rs  naming.rs
src/web/: elementref.rs  node.rs
tests/: e2e_tests.rs  mir_e2e.rs  mir_pipeline.rs
tests/cases/: arc_factory.dream  arc_factory.expected  arc_factory.ml  arc_param.dream  arc_param.ml  arc_return.dream  arc_return.ml  arithmetic.dream  arithmetic.expected  arithmetic.ml  arrays.dream  arrays.expected  arrays.ml  async_accessor_error.dream  async_accessor_error.expected_error  async_await_outside.dream  async_await_outside.expected_error  async_basic.dream  async_basic.expected  async_combinators.dream  async_combinators.expected  async_method.dream  async_method.expected  async_method_generic.dream  async_method_generic.expected_error  async_ref_params.dream  async_ref_params.expected  bitwise_ops.dream  bitwise_ops.expected  bitwise_ops.ml  branching.dream  branching.expected  branching.ml  casting.dream  casting.ml  char_literals.dream  char_literals.expected  char_literals.ml  class_foreach.dream  class_foreach.expected  (+239 more)
tooling/: README.md  build_extension.sh  start
tooling/docs/: dream_lexer.py
tooling/dream-analyzer/: Cargo.toml
tooling/dream-analyzer/src/: analysis.rs  format.rs  index.rs  lib.rs  model.rs  position.rs  tokens.rs
tooling/dream-analyzer/tests/: smoke.rs
tooling/dream-lsp/: Cargo.toml
tooling/dream-lsp/src/: analysis.rs  backend.rs  bin.rs  conversions.rs  format.rs  index.rs  lib.rs  main.rs  position.rs  semantic_tokens.rs  tokens.rs
tooling/dream-lsp/src/index/: builder.rs  mod.rs  model.rs  queries.rs
tooling/dream-lsp/tests/: lsp_tests.rs  parser_sanity.rs  smoke.rs  test_crash.rs  test_diag.rs
tooling/dream-lsp/tests/common/: mod.rs
tooling/vscode/: dream-lang-0.1.0.vsix  icon-theme.json  package-lock.json  package.json
tooling/web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+124 files in other folders)
