[package]
name = "dream"
version = "0.1.0"
authors = ["Shivendra Pratap Singh <shivendrapsingh014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.20.3"
logos = "0.16.1"
regex = "1.5.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wasmtime = { version = "45.0.2", optional = true }
wat = "1.252.0"

[features]
default = ["native"]
# `native` pulls in the wasmtime-backed WASM runtime used by the `dream` CLI to
# execute compiled programs. It is excluded from the wasm32 analyzer build, whose
# only need is the lexer/parser/analyzer front-end.
native = ["wasmtime"]

[dev-dependencies]
pretty_assertions = "1.4.1"

[workspace]
members = [".", "tooling/dream-analyzer"]
# v2 resolver so the wasm32 analyzer build does not inherit the root crate's default
# `native` feature (and therefore never tries to compile wasmtime for wasm).
resolver = "2"
