[package]
name = "dream"
version = "0.1.0"
authors = ["Shivendra Pratap Singh <shivendrapsingh014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Front-end crates: the source-text primitives, diagnostics, and the lexer/parser/AST live in
# their own layered crates and are re-exported from `lib.rs` so existing
# `crate::{syntax, diagnostics, text}::...` paths keep resolving.
dream-text = { path = "crates/dream-text" }
dream-diagnostics = { path = "crates/dream-diagnostics" }
dream-syntax = { path = "crates/dream-syntax" }
bumpalo = "3.20.3"
# Insertion-ordered map used for the codegen tables whose iteration order reaches emitted
# `.wat` output, so compilation is reproducible (std `HashMap` randomizes iteration per run).
indexmap = "2"
logos = "0.16.1"
regex = "1.5.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wasmtime = { version = "45.0.2", optional = true }
wat = "1.252.0"
# HTTP client backing the native (wasmtime) `HttpClient` host functions (src/execution/host.rs).
# Blocking so it fits the synchronous host-call model; `serde_json` parses the header object.
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde_json = { version = "1", optional = true }
# Cross-platform raw-mode terminal input backing `System.readKey` (src/execution/host/console.rs)
# and Windows ANSI virtual-terminal setup for `System.setForeground`/`setBackground`.
crossterm = { version = "0.28", optional = true }

[features]
default = ["native"]
# `native` pulls in the wasmtime-backed WASM runtime used by the `dream` CLI to
# execute compiled programs. It is excluded from the wasm32 analyzer build, whose
# only need is the lexer/parser/analyzer front-end.
native = ["wasmtime", "reqwest", "serde_json", "crossterm"]

[dev-dependencies]
pretty_assertions = "1.4.1"

[workspace]
members = [
    ".",
    "crates/dream-text",
    "crates/dream-diagnostics",
    "crates/dream-syntax",
    "tooling/dream-lsp",
]
# v2 resolver so the wasm32 analyzer build does not inherit the root crate's default
# `native` feature (and therefore never tries to compile wasmtime for wasm).
resolver = "2"
