[package]
name = "dream-analyzer"
version = "0.1.0"
authors = ["Shivendra Pratap Singh <shivendrapsingh014@gmail.com>"]
edition = "2018"
description = "WebAssembly language service for the Dream language (diagnostics, hover, completion, go-to-definition, formatting)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Reuse the compiler front-end (lexer/parser/analyzer) but drop the native-only
# wasmtime runtime so the crate compiles to wasm32-unknown-unknown.
dream = { path = "../..", default-features = false }
bumpalo = "3.20.3"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
