[package]
name = "dream-lsp"
version = "0.1.0"
authors = ["Shivendra Pratap Singh <shivendrapsingh014@gmail.com>"]
edition = "2021"
description = "Native VS Code Language Server for the Dream language."

[dependencies]
dream = { path = "../..", default-features = false }
bumpalo = "3.20.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
dashmap = "5.5"
